And over 9000 years later... Compass is finally working (somewhat)

--- a/app/assets/stylesheets/_all.css.scss
+++ b/app/assets/stylesheets/_all.css.scss
@@ -2,6 +2,9 @@
 $darkGreen: #466843;
 $lightGreen: #629b62;
 
+@import "compass/layout/sticky-footer";
+@include sticky-footer(200px, "#footer");
+
 
 // Mixins
 @mixin backgroundNoise {
