--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -14,7 +14,7 @@
 
 <%= render 'layouts/header' %>
 <%= render 'layouts/header2' %>
-<div id="root">
+<div id="content">
 <div id = "announcements" class = "span10 offset1">
 
   <h1>Club Announcements</h1>
@@ -26,12 +26,7 @@
   
   <% end %>
   </div>
-  
 </div>
-
-<br />
-
-<div id="footer_spacer"></div>
 
 <%= render 'layouts/footer' %>
 </div>
