--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -5,13 +5,14 @@
     }
     #map {
       background-image: url(<%= image_path('map.png') %>);
+      background-size: 100%;
       background-repeat: no-repeat;
       display: block;
       margin: 0 auto;
       margin-bottom: .5em;
       text-align: center;
       margin-top: .2em;
-      width: 763px;
+      width: 863px;
       height: 447px;
       position: relative;
     }
@@ -36,72 +37,84 @@
       margin-right: 10%;
     }
     #one {
-      left: 690px;
+      left: 815px;
       top: 275px;
     }
     #two {
-      left: 680px;
+      left: 810px;
       top: 305px;
     }
     #three {
-      left: 670px;
+      left: 800px;
       top: 335px;
     }
     #four {
-      left: 630px;
+      left: 780px;
       top: 365px;
     }
     #five {
-      left: 585px;
-      top: 385px;
-    }
-    #six {
-      left: 535px;
-      top: 390px;
-    }
-    #seven {
-      left: 490px;
-      top: 393px;
-    }
-    #eight {
-      left: 445px;
-      top: 393px;
-    }
-    #nine {
-      left: 400px;
-      top: 394px;
-    }
-    #ten {
-      left: 320px;
-      top: 396px;
-    }
-    #eleven {
-      left: 265px;
-      top: 397px;
-    }
-    #twelve {
-      left: 125px;
-      top: 400px;
-    }
-    #thirteen {
-      left: 80px;
+      left: 725px;
       top: 395px;
     }
+    #six {
+      left: 670px;
+      top: 408px;
+    }
+    #seven {
+      left: 610px;
+      top: 410px;
+    }
+    #eight {
+      left: 550px;
+      top: 410.5px;
+    }
+    #nine {
+      left: 490px;
+      top: 410px;
+    }
+    #ten {
+      left: 400px;
+      top: 409px;
+    }
+    #eleven {
+      left: 340px;
+      top: 409px;
+    }
+    #twelve {
+      left: 280px;
+      top: 408px;
+    }
+    #thirteen {
+      left: 170px;
+      top: 408px;
+    }
     #fourteen {
-      left: 30px;
-      top: 250px;
+      left: 110px;
+      top: 395px;
     }
     #fifteen {
-      left: 30px;
-      top: 210px;
+      left: 64px;
+      top: 320px;
     }
     #sixteen {
-      left: 30px;
-      top: 140px;
+      left: 69px;
+      top: 270px;
     }
     #seventeen {
-      left: 30px;
-      top: 100px;
+      left: 81px;
+      top: 220px;
+    }
+    #eighteen {
+      left: 93px;
+      top: 170px;
+    }
+    #nineteen {
+      left: 70px;
+      top: 62px;
+    }
+    #twenty {
+      left: 20px;
+      top: 62px;
     }
   </style>
   <script type="text/javascript">
@@ -134,6 +147,7 @@
     <div class="bus" id="seventeen"><%= @bus.seventeen %></div>
     <div class="bus" id="eighteen"><%= @bus.eighteen %></div>
     <div class="bus" id="nineteen"><%= @bus.nineteen %></div>
+    <div class="bus" id="twenty"><%= @bus.twenty %></div>
   </div>
   <p id="updated">Last updated at: <%= @updated %></p>
 </div>
