--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,8 @@
 <body>
 
   <div id="content">
-  
-  <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %>
+    <%= yield :above_container %>
     <div class="container">
       <%= yield %>
       
