Added the ability to upload a profile picture to the site when creating a use
- Using Paperclip
*Bonus:* Completely re-designed the Sign Up page. Dat shit is fan-CY

--- a/app/assets/stylesheets/_all.css.scss
+++ b/app/assets/stylesheets/_all.css.scss
@@ -201,6 +201,12 @@ a {
 	}
 }
 
+.nav-avatar {
+  position: relative;
+  top: -1px;
+  height: 18px;
+}
+
 .brand {
 	a {
 		text-shadow: 0 1px 0 #ffffff !important;
