--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
 <div class="row">
-  <div id = "announcements" class = "span10 offset1">
+  <div id = "announcements" class = "span10 offset1" style = "border-radius: 5px; margin-bottom: 5px;">
   
     <h1>Club Announcements</h1>
     
