Authorization is working.
I got authorization working. Right now, the only roles which can
actually do anything are the admins and editors, but I will add more
soon.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,15 @@
   			<h1>Harborfields High School</h1>
   		</div>
   	</div><!-- end header -->
-  	<div class="row-fluid" id="announcements">
+    
+    <% flash.each do |type, message| %>
+      <div class="alert <%= bootstrap_class_for(type) %> fade in">
+        <button class="close" data-dismiss="alert">×</button>
+        <%= message %>
+      </div>
+    <% end %>
+  	
+    <div class="row-fluid" id="announcements">
   		<h3>Today's Announcements</h3>
   		 <p><%= @announcement.content %></p>
   	</div>
