--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,28 +27,28 @@
 				  <% else %>
 				  	<li class="dropdown">
 						<a class="dropdown-toggle" href="#" data-toggle="dropdown">Log In<b class="caret"></b></a>
-						<div class="dropdown-menu span4" style = "position: absolute;">
-                <h3 style="text-align: center">Sign In</h1>
-                  <div id="form_box">
-                  <div style = "margin-left: 15px;">
-                  <%= form_for(:user, :as => :user, :url => session_path(:user)) do |f| %>
-                    <%= f.label :email %>
-                    <%= f.text_field :email %>
-                      
-                    <%= f.label :password %>
-                    <%= f.password_field :password %>
-                    <br />
+						<div class="dropdown-menu" id="user-nav-box" style="position: absolute;">
+              <h3 style="text-align: center">Sign In</h1>
+              <%= form_for(:user, :as => :user, :url => session_path(:user), html: { class: 'form-horizontal' }) do |f| %>
+                <div class="control-group">
+                  <%= f.label :email, class: 'control-label' %>
+                  <div class="controls">
+                    <%= f.text_field :email, placeholder: 'Email Address' %>
                   </div>
-                    <div style="text-align: center;">
-                      <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
-                    </div>
-                  <% end %><!-- end of form -->
-                <div class = "link">
-                  <p>New user? <%= link_to "Sign up now!", new_user_registration_path %></p>
                 </div>
+                <div class="control-group">
+                  <%= f.label :password, class: 'control-label' %>
+                  <div class="controls">
+                    <%= f.password_field :password, placeholder: 'Password' %>
+                  </div>
+                </div>
+                <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
+              <% end %><!-- end of form -->             
+              <div class = "link">
+                <p>New user? <%= link_to "Sign up now!", new_user_registration_path %></p>
               </div>
-            
 						</div>
+						</li>
 				  <% end %>
 				  </ul>
   		  </div>
