--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,8 +19,10 @@
 						<li class="dropdown">
   						<a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= image_tag current_user.avatar.url(:header), class: 'nav-avatar' %> <%= current_user.name %><b class="caret"></b></a>
   						<ul class="dropdown-menu">
-  						  <li><a href="#">Test.</a></li>
-  						  <li class="divider"></li>
+  						  <% if can? :manage, :all %>
+                  <li><%= link_to "Admin Interface", "/admin" %></li>
+  						    <li class="divider"></li>
+                <% end %>
   						  <li><%= link_to "Log out", destroy_user_session_path%></li>
   						</ul>
 						</li>
