--- a/app/views/upcoming_events/_form.html.erb
+++ b/app/views/upcoming_events/_form.html.erb
@@ -11,7 +11,12 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :content %><br />
+    <%= f.text_area :content %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
+
 <% end %>
