Working on fixing the position of the buttons

--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -262,6 +262,7 @@ $midMax: 979px;
 #memos {
   min-height: 11em;
   display: block;
+  position: relative;
   padding: {
     left: 4px;
     right: 4px;
@@ -300,41 +301,37 @@ $midMax: 979px;
 #advance {
   position: absolute;
   display: block;
+  top: 5em;
+  z-index: 1000;
   @media (max-width: $smallestMax) {
-    top: 24.5em;
     left: 80%;
   }
   @media (max-width: $smallMax) and (min-width: $smallestMax + 1) {
-    top: 30.5em;
     left: 85%;
   }
   @media (max-width: $midMax) and (min-width: $smallMax + 1) {
-    top: 30.5em;
     left: 90.5%;
   }
   @media (min-width: $midMax + 1) {
-    top: 30em;
     left: 894px;
   }
 }
 #reverse {
   position: absolute;
   display: block;
+  top: 5em;
+  z-index: 1000;
   @media (max-width: $smallestMax) {
-    top: 24.5em;
     left: 12%;
   }
   @media (max-width: $smallMax) and (min-width: $smallestMax + 1) {
-    top: 30.5em;
     left: 6.5%;
   }
   @media (max-width: $midMax) and (min-width: $smallMax + 1) {
-    top: 30.5em;
     left: 5%;
   }
   @media (min-width: $midMax + 1) {
-    top: 30em;
-    left: 9px;
+    left: -15px;
   }
 }
 
