--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -259,10 +259,13 @@ $smallestMax: 517px;
 $smallMax: 669px;
 $midMax: 979px;
 
+#memos_wrapper {
+  position: relative;
+}
+
 #memos {
   min-height: 11em;
   display: block;
-  position: relative;
   padding: {
     left: 4px;
     right: 4px;
@@ -322,7 +325,7 @@ $midMax: 979px;
   top: 5em;
   z-index: 1000;
   @media (max-width: $smallestMax) {
-    left: 12%;
+    left: 10%;
   }
   @media (max-width: $smallMax) and (min-width: $smallestMax + 1) {
     left: 6.5%;
@@ -331,7 +334,7 @@ $midMax: 979px;
     left: 5%;
   }
   @media (min-width: $midMax + 1) {
-    left: -15px;
+    left: 12px;
   }
 }
 
