--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
   	      <% else %>
   	      <div class="memo" style="background-color: <%= memo.bg_color %>; color: <% unless memo.text_color.nil? %><%= memo.text_color %><% else %>black<% end %>;">
   	        <h2><%= memo.title %></h2>
-  	        <p><%=raw memo.content %></p>
+  	        <%=raw memo.content %>
   	      </div>
   	      <% end %>
   	    <% end %>
