Some little changes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,7 @@
   			<a class="brand" href="/">The Harbinger Online</a>
   			<div class="nav-collapse">
   				<ul class="nav">
-  					<li id="nav_home"><%= link_to "Home", "/" %></li>
-  					<li id="nav_news"><a href="#">News</a></li>
+  					<li id="nav_home"><%= link_to "Home", root_path %></li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
   				</ul>
