Fixed padding on home page + linked team page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 					<span id="footerTitle">Important Links</span>
 					<ul>
 						<li><%= link_to "About Page", about_path %></li>
-						<li>The Harbinger Team</li>
+						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
 						<li><%= link_to "Get Involved", get_involved_path %></li>
 					</ul>
 				</div> <!-- end "important" -->
