--- a/app/views/static_pages/harbingerteam.erb
+++ b/app/views/static_pages/harbingerteam.erb
@@ -1,22 +1,18 @@
-<h1>About the Harbinger Team </h1>
-<h3>Members:</h3>
+<div class="span6 offset3" id="teampage">
+	<h1>About the Harbinger Team </h1>
+	<h3>Advisor:</h3>
+	<p>Mr. Ambrosio</p>
+	<h3>Members:</h3>
 
-<b>News Team</b>
-<p>This is empty....<em>For now</em>...</p>
-<ul>
-	<!-- insert News Team members here inside of <li> tags-->
-</ul>	
+	<h5>News Team</h5>
+	<p>This is empty....<em>For now</em>...</p>
+	
+		<!-- insert News Team members here inside of <p> tags-->
+		
 
-<b>Web Development</b>
-
-<ul>
-	<li>Head Developers</li>
-	<ul>
-		<li>Alex LaFroscia</li>
-		<li>Brian Kelley</li>
-	</ul>
-	<li>Interns</li>
-	<ul>
-		<li>Jake Dombrower</li>
-		<li>Steve Schmidt</li>
-	</ul>
+	<h5>Web Development</h5>
+	<p>Alex LaFroscia</p>
+	<p>Brian Kelley</p>
+	<p>Jake Dombrower</p>
+	<p>Steve Schmidt</p>
+</div>
