--- a/app/assets/stylesheets/_all.css.scss
+++ b/app/assets/stylesheets/_all.css.scss
@@ -305,3 +305,15 @@ a {
 	*background-color: #003bb3;
 }
 
+#teampage {
+  background: #fff;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
+  border-radius: 5px;
+  text-align: center;
+}
