Added a color picker to the Text and BG colors for the Sports

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
   	      <% if memo.is_image %>
   	      
   	      <% else %>
-  	      <div class="memo" style="background-color: <%= memo.bg_color %>; color: <% unless memo.text_color.nil? %><%= memo.text_color %><% else %>black<% end %>;">
+  	      <div class="memo" style="background-color: #<%= memo.bg_color %>; color: <% unless memo.text_color.nil? %>#<%= memo.text_color %><% else %>black<% end %>;">
   	        <h2><%= memo.title %></h2>
   	        <%=raw memo.content %>
   	      </div>
