--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -31,15 +31,12 @@
 			<div class="tab-content">
 				<div class="tab-pane" id="fall">
 					<% @fall.each do |sport| %>
-					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-					<div class="sport" style="background-image: url(<%= photo_path %>);">
+					<div class="sport" style="background-image: url( <%= image_path sport.banner.url(:full) %> );">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
 									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
-
-                                    <!-- Change 0.0.0.0:3000 - not localhost -->
 								</div>
 								<div class="pull-right">
 									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
@@ -51,8 +48,7 @@
 				</div>
 				<div class="tab-pane active" id="winter">
 					<% @winter.each do |sport| %>
-					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-					<div class="sport" style="background-image: url(<%= photo_path %>);">
+					<div class="sport" style="background-image: url( <%= image_path sport.banner.url(:full) %> );">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
@@ -69,8 +65,7 @@
 				</div>
 				<div class="tab-pane" id="spring">
 					<% @spring.each do |sport| %>
-					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
-					<div class="sport" style="background-image: url(<%= photo_path %>);">
+					<div class="sport" style="background-image: url( <%= image_path sport.banner.url(:full) %> );">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
