--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -28,8 +28,8 @@
 	</ul>
 	<div class="tab-content">
 		<div class="tab-pane active limited-width" id="info">
-			<%= @sport.alert %>
-			<p><%= @sport.content %></p>
+			<%=raw @sport.alert %>
+			<p><%=raw @sport.content %></p>
 		</div>
 		<div class="tab-pane limited-width" id="photos">
 			<div class="row-fluid">
