--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -286,6 +286,7 @@ $midMax: 979px;
     left: auto;
   }
   overflow-x: hidden;
+  width: 837px;
   @media (max-width: $smallestMax) {
     width: 275px;
   }
@@ -296,7 +297,7 @@ $midMax: 979px;
     width: 553px;
   }
   @media (min-width: $midMax + 1) {
-    width: 837px;
+    width: 89%;
   }
 }
 
