Updated the Title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Harbingernews</title>
+  <title>Harbinger News</title>
   <%= favicon_link_tag %>
   
   <%= csrf_meta_tags %>
