--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -4,7 +4,7 @@
 
 @import "compass/css3/box-shadow";
 @import "compass/css3/border-radius";
-@import 'all';
+@import "mixins";
 
 // Tablet-Size and Under
 @media all and (max-width: 767px) {
