--- a/app/assets/stylesheets/_overrides.scss
+++ b/app/assets/stylesheets/_overrides.scss
@@ -1,3 +1,4 @@
+/* Buttons */
 .btn-custom {
 	color: #FFFFFF;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -24,6 +25,7 @@
 	*background-color: #003bb3;
 }
 
+/* Navbar */
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
@@ -53,4 +55,27 @@
   background-repeat: repeat-x;
   outline: 0;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+}
+
+.navbar-static-top {
+	z-index: 100;
+	position: relative;
+	box-shadow: 0px 0px 4px 0px #3e3e3e;
+	@include pie;
+}
+
+.navbar-inner {
+	background-color: $darkGreen;
+	background-image: none !important;
+	border-bottom: 4px solid #629b62 !important;
+	filter: none !important;
+	a {
+		color: white !important;
+		text-shadow: 0px 1px 0px #717171;
+	}
+	.active {
+		a {
+			background-color: $lightGreen !important;
+		}
+	}
 }
