--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -4,7 +4,14 @@
 
 @import "compass/css3/box-shadow";
 @import "compass/css3/border-radius";
+@import 'compass/css3/pie';
 @import "mixins";
+
+$pie-behavior: url("/assets/PIE.htc");
+
+.pie-element {
+  @include
+}
 
 // Tablet-Size and Under
 @media all and (max-width: 767px) {
@@ -162,6 +169,7 @@ body {
 
 #announcements {
 	//Padding for announcement text on home page
+	@mixin pie;
 	p {
 		padding: {
 		left: 5px;
