More stupid fixes

--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -165,7 +165,7 @@ body {
 
 #announcements {
 	//Padding for announcement text on home page
-	@mixin pie;
+	@include pie;
 	p {
 		padding: {
 		left: 5px;
