--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -5,6 +5,7 @@
 @import "compass/css3/box-shadow";
 @import "compass/css3/border-radius";
 @import "compass/css3/pie";
+@import "compass/css3";
 @import "mixins";
 
 $pie-behavior: url("/assets/PIE.htc");
