Made some tweaks to make the boxes render better when using Pie

--- a/app/assets/stylesheets/home/index.css.scss.erb
+++ b/app/assets/stylesheets/home/index.css.scss.erb
@@ -256,17 +256,20 @@ body {
 		padding: {
 			bottom: $bottomPadding;
 			right:5px; 
-			left:20px;
+			left:5px;
 		}
 
 	}
 	#recent {
   	@include pie;
 		@include box-shadow(1px 1px 6px rgba(0,0,0,0.68));
+		background: {
+  		color: white;
+		}
 		padding: {
 			bottom: $bottomPadding;
 			right:5px; 
-			left:20px;
+			left:5px;
 		}
 	}
 }
