--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,13 +43,17 @@
       <%= image_tag('buttons/Prev.png', id: 'reverse') %>
     </div>
   	<div class="row-fluid" id="events">
-  		<div class="span6" id="upcoming">
-  			<h3>Upcoming Events</h3>
-        <%=raw @upcoming.content %>
+  		<div class="span6">
+  		  <div id="upcoming">
+    			<h3>Upcoming Events</h3>
+          <%=raw @upcoming.content %>
+  		  </div>
   		</div>
-  		<div class="span6" id="recent">
-  			<h3>Recent Events</h3>
-  			<%=raw @recent.content %>
+  		<div class="span6">
+  		  <div id="recent">
+    			<h3>Recent Events</h3>
+    			<%=raw @recent.content %>
+  		  </div>
   		</div>
   	</div>
   </div>
