Spelling mistake, lol.
The second header was not being loaded on the show pages, it turns out that "container" was spelled "continer".

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -8,7 +8,7 @@
     });
   </script>
 <% end %>
-<% content_for :above_continer do %>
+<% content_for :above_container do %>
   <%= render 'layouts/header2' %>
 <% end %>
 
