--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,11 @@
 					<% if signed_in? %>
 						<li class="dropdown">
   						<a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                  <% if !current_user.avatar_file_name.nil? %>
-                    <%= image_tag current_user.avatar.url(:header), class: 'nav-avatar' %><% end %> <%= current_user.name %><b class="caret"></b></a>
+                <% if !current_user.avatar_file_name.nil? %>
+                  <%= image_tag current_user.avatar.url(:header), class: 'nav-avatar' %>
+                <% end %> 
+                <%= current_user.name %><b class="caret"></b>
+              </a>
   						<ul class="dropdown-menu">
   						  <% if can? :manage, :all %>
                   <li><%= link_to "Admin Interface", "/admin" %></li>
