--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -14,6 +14,8 @@
     $(function(){
       $('#nav_sports').addClass('active');
     });
+    
+    var sport_id = <%= Sport.find_by_slug(params[:slug]).id %>;
   </script>
 <% end %>
 <% content_for :js_bottom do %>
