Added a visual marker on the page for the favorited status of the page

--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -7,6 +7,9 @@
     #favorite_button i {
       margin-top: 9px;
     }
+    .favorite {
+      background-color: red;
+    }
   </style>
 <% end %>
 <% content_for :js do %>
