--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,10 +22,16 @@
     						  <li class="dropdown-submenu">
                     <a href="#">Favorites</a>
                     <ul class="dropdown-menu">
+                      <% if !current_user.favorites.find(:all, :conditions => { :favoritable_type => 'sport' }).empty? %><li class="nav-header">Sport</li><% end %>
                       <% current_user.favorites.each do |fav| %>
                         <% if fav.favoritable_type == 'sport' %>
                           <li><a href="/sports/<%= Sport.find(fav.favoritable_id).slug %>"><%= Sport.find(fav.favoritable_id).title %></a></li>
-                        <% elsif fav.favoritable_type == 'club' %>
+                        <% end %>
+                      <% end %>
+                      <% if !current_user.favorites.find(:all, :conditions => { :favoritable_type => 'club' }).empty? %><li class="nav-header">Clubs</li><% end %>
+                      <% current_user.favorites.each do |fav| %>
+                        <% if fav.favoritable_type == 'club' %>
+                          <li><a href="#"><b>Clubs</b></a></li>
                           <li>Club</li>
                         <% end %>
                       <% end %>
@@ -57,7 +63,7 @@
                     <li><%= link_to "Upcoming Events", "/admin/upcoming_event" %></li>
                   <% end %>
                 <% end %>
-                <div class="divider"></div>
+                <li class="divider"></li>
   						  <li><%= link_to "Log out", destroy_user_session_path %></li>
   						</ul>
 						</li>
