--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %><%= @sport.title %><% end %>
 <% content_for :css do %>
   <%= stylesheet_link_tag "sports_page", :media => "all" %>
   <style type="text/css">
